# All_You_Need_Is_Camera

./: .gitignore  README.md  art_score_predict.py  main.py  pyproject.toml  random_forest_model.joblib  requirements.txt  test_framework.py  writemusicsheet.py
Scoring_System/score_art/Dataset/: Imperial_Dance.txt
aync_camera/: __init__.py
aync_camera/common/: __init__.py  game_base.py
aync_camera/config/: __init__.py  game_settings.py  rhythm_config.py
aync_camera/core/: __init__.py  pose_framework.py
aync_camera/games/: __init__.py  game_config.py  rhythm_game.py
aync_camera/games/rhythm/: __init__.py  game_logic.py  music_sheet_loader.py  note.py
aync_camera/initialization/: ViT.py  __init__.py  angle.py  depth_a.py  distance.py  distance_pose_height.py  initialize.py  rotation.py  test.ipynb  test.py
aync_camera/ui/: __init__.py
aync_camera/ui/rhythm/: __init__.py  (+1 more)
aync_camera/utils/: __init__.py
ideas/: Dance Move Comparison.py  Falling-Note Rhythm Game.py  Fruit Ninja.py
initialization/: __init__.py  angle.py  distance.py  distance_eye_distance.py  distance_face_width.py  distance_pose_height.py  position_mapping.py  rotation.py  user_preparation.py
musicsheet/earthquake/: earthquake_easy.json  earthquake_hard.json  earthquake_normal.json
musicsheet/maria/: maria_easy.json  maria_hard.json  maria_normal.json
plans/: Detailed Technical Implementation Plan.md  Rhytnm_Game_Logic.md  Technical_Analysis.md
scoring_system/: score_similarity.ipynb
scoring_system/score_art/: Scoring_UI.py  art_score_predict.py  train_art_score_model.py
(+1 files in other folders)
