[project]
name = "project"
version = "0.1.0"
description = "All You Need Is Camera - Interactive Framework using YOLOv8-Pose"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "filterpy>=1.4.5",
    "librosa>=0.11.0",
    "markupsafe==2.1.5",
    "mediapipe>=0.10.14",
    "numpy>=2.1.2",
    "opencv-python>=4.11.0.86",
    "pygame>=2.6.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "ultralytics>=8.3.135",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
]

[tool.setuptools]
packages = ["aync_camera"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
